# CS2516

./: CMakeLists.txt  README.md
src/: ChannelSettingsManager.h  PluginProcessor.cpp  PluginProcessor.h
src/classes/: ChannelSelector.cpp  ChannelSelector.h  ChannelSettingsManager.cpp  ChannelSettingsManager.h  CustomButton.cpp  CustomButton.h  Fader.cpp  Fader.h  FlatButton.cpp  FlatButton.h  Knob.cpp  Knob.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  VuMeter.cpp  VuMeter.h
src/styles/: ButtonLookAndFeel.cpp  ButtonLookAndFeel.h  KnobLookAndFeel.cpp  KnobLookAndFeel.h
src/types/: ColourSetting.h  EQSetting.h  FiltersSetting.h  SaturationSetting.h
